fix the ui on mobile screen

--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -3,7 +3,6 @@
   top:0;
   height:10vh;
   width: 100vw;
-  border-top: 5px solid #FF7B11;
   box-shadow: 0px 1px 1px gray;
   position: absolute;
 }
